crates/contextdb-core/tests/fixtures/compile_fail/no_from_u64_for_wallclock.stderr
error[E0277]: the trait bound `Wallclock: From<u64>` is not satisfied
 --> tests/fixtures/compile_fail/no_from_u64_for_wallclock.rs:4:18
  |
4 |     takes_from::<contextdb_core::Wallclock>(42u64);
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<u64>` is not implemented for `Wallclock`
  |
note: required by a bound in `takes_from`
 --> tests/fixtures/compile_fail/no_from_u64_for_wallclock.rs:1:18
  |
1 | fn takes_from<T: From<u64>>(_: T) {}
  |                  ^^^^^^^^^ required by this bound in `takes_from`

error[E0308]: mismatched types
 --> tests/fixtures/compile_fail/no_from_u64_for_wallclock.rs:4:45
  |
4 |     takes_from::<contextdb_core::Wallclock>(42u64);
  |     --------------------------------------- ^^^^^ expected `Wallclock`, found `u64`
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
 --> tests/fixtures/compile_fail/no_from_u64_for_wallclock.rs:1:4
  |
1 | fn takes_from<T: From<u64>>(_: T) {}
  |    ^^^^^^^^^^               ----
help: try wrapping the expression in `contextdb_core::Wallclock`
  |
4 |     takes_from::<contextdb_core::Wallclock>(contextdb_core::Wallclock(42u64));
  |                                             ++++++++++++++++++++++++++     +
